--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,13 @@
   <link rel="shortcut icon" href="logo.svg">
 </head>
 <body>
-  <h1>pinkgill</h1>
+  <main>
+    <header>
+      <img src="/logo.svg" alt="pinkgill logo" width="48" height="48">
+      <h1>pinkgill</h1>
+    </header>
+
+  </main>
   <script src="pinkgill.min.js"></script>
 </body>
 </html>
