--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>pinkgill</title>
-  <link rel="stylesheet" href="pinkgill.css">
+  <link rel="stylesheet" href="/pinkgill.min.css">
   <link rel="shortcut icon" href="logo.svg">
 </head>
 <body>
@@ -15,6 +15,6 @@
     </header>
 
   </main>
-  <script src="pinkgill.min.js"></script>
+  <script src="/pinkgill.min.js"></script>
 </body>
 </html>
