loading and hitting api with session

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <img src="/logo.svg" alt="pinkgill logo" width="48" height="48">
       <h1>pinkgill</h1>
     </header>
-
+    <pg-root></pg-root>
   </main>
   <script src="/pinkgill.min.js"></script>
 </body>
