avatar works dynamically

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <header>
       <img src="/logo.svg" alt="pinkgill logo" width="48" height="48">
       <h1>pinkgill</h1>
+      <pg-avatar></pg-avatar>
     </header>
     <pg-root></pg-root>
   </main>
