sidebar and docs

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,14 @@
       <pg-avatar></pg-avatar>
     </header>
     <pg-root></pg-root>
+    <footer>
+      made by <a href="https://berjon.com/" rel="external">Robin Berjon</a>
+      (<a href="https://robin.berjon.com/" rel="external">@robin.berjon.com</a>).
+      •
+      <a href="/docs/" rel="external">docs</a>
+      •
+      <a href="https://github.com/darobin/pinkgill.mycopunk.it/" rel="external">code</a>
+    </footer>
   </main>
   <script src="/pinkgill.min.js"></script>
 </body>
