--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width">
   <title>pinkgill</title>
   <link rel="stylesheet" href="/pinkgill.min.css">
-  <link rel="shortcut icon" href="logo.svg">
+  <link rel="shortcut icon" href="/icon.svg">
 </head>
 <body>
   <main>
