make it work with subdirectories for now

--- a/examples/wishing/index.html
+++ b/examples/wishing/index.html
@@ -6,7 +6,7 @@
   <title>Wishing Tile, Wishing Tile…</title>
 </head>
 <body>
-  <script src="/.well-known/tiles/wishing"></script>
+  <script src=".well-known/tiles/wishing"></script>
   <script src="colour-wish.js"></script>
 </body>
 </html>
