--- a/examples/wishing/index.html
+++ b/examples/wishing/index.html
@@ -32,6 +32,9 @@
       padding: 0.5rem;
       border-bottom: 1px solid #ddd;
     }
+    .colour-actions input {
+      margin-left: 0.5rem;
+    }
     .colour {
       height: 100%;
       position: relative;
